--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-
     <link rel="manifest" href="manifest.json">
-
     <!-- un-comment this code to enable service worker
     <script>
       if ('serviceWorker' in navigator) {
@@ -15,38 +13,31 @@
           .catch(err => console.log('Error', err));
       }
     </script>-->
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
-    
-
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
      <script src="lib/angular-qr-scanner/qr-scanner.js"></script>
     <script src="lib/angular-qr-scanner/src/jsqrcode-combined.min.js"></script>
     <script src="js/ng-cordova.min.js"></script>
-	  <script src="js/cordova.js"></script>
-
-    
+	  <script src="cordova.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/jquery-3.1.1.js"></script>
-
-
-
   </head>
   
   <body ng-app="starter">
-  <ion-nav-bar class="bar" style="">
-    <ion-nav-back-button class="button-icon icon" style="width: 50px;" >
-        <i class="ion-arrow-left-c"></i>
-    </ion-nav-back-button>
-  </ion-nav-bar>
+    <ion-nav-bar class="bar" style="">
+      <ion-nav-back-button class="button-icon icon"  >
+          <i class="ion-arrow-left-c"></i>
+      </ion-nav-back-button>
+    </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
+    <div class="bar bar-footer">
+      <h1 class="title">Pensez à vous connecter à Internet !</h1>
+    </div>
   </body>
 </html>
